--- a/tatraja/public/manifest.json
+++ b/tatraja/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tatraja",
+  "name": "Tatraja Art NFT",
   "icons": [
     {
       "src": "favicon.ico",
